--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,13 @@ node_js:
   - "10"
 install:
   - npm install
-script:
-  - npm run test
-after_success:
-- cat ./coverage/lcov.info | node_modules/.bin/coveralls --verbose
-- rm -rf ./coverage
 branches:
   only:
     - master
     - dongsir
 before_deploy:
   - npm run build
-  - rm -rf ./src ./test ./coverage ./script ./.babelrc
+  - rm -rf ./src ./test ./script
 deploy:
   provider: npm
   email: "$NPM_EMAIL"
