--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "JavaScript常用函数库",
   "main": "dist/jutils.min.js",
   "scripts": {
+  	"test": "echo \"Error: no test specified\"",
   	"build": "node script/build.js",
     "build-copy": "node script/build-copy.js",
     "build-pack": "node script/build-pack",
