--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-  - "10"
+  - "8"
 install:
   - npm install
+script:
+  - npm run test
 branches:
   only:
     - master
